# rabia

./: .dockerignore  API_DOCUMENTATION.md  CHANGELOG.md  CODE_REVIEW_FIXES.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_PR_REVIEW_FIXES.md  Cargo.toml  Dockerfile  LICENSE  PROTOCOL_GUIDE.md  README.md  SECURITY_REVIEW.md  TROUBLESHOOTING.md  deny.toml  deny.toml.backup
.claude/agents/: ticket-implementer.md
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: Cargo.toml
benchmarks/benches/: baseline_performance.rs  comprehensive_optimization.rs  memory_pool_comparison.rs  peak_performance.rs  serialization_comparison.rs  tcp_network_performance.rs  tcp_network_performance.rs.disabled
docs/: SMR_GUIDE.md
examples/: Cargo.toml  banking_smr_example.rs  basic_usage.rs  consensus_cluster.rs  counter_smr_example.rs  custom_state_machine.rs  kvstore_smr_example.rs  kvstore_usage.rs  leader_usage.rs  performance_benchmark.rs  tcp_networking.rs
examples/banking_smr/: Cargo.toml  README.md
examples/banking_smr/src/: lib.rs
examples/counter_smr/: Cargo.toml  README.md
examples/counter_smr/src/: lib.rs
examples/kvstore_smr/: Cargo.toml  README.md
examples/kvstore_smr/src/: lib.rs  smr_impl.rs  store.rs
rabia-core/: Cargo.toml
rabia-core/src/: batching.rs  error.rs  lib.rs  memory_pool.rs  messages.rs  network.rs  persistence.rs  serialization.rs  smr.rs  state_machine.rs  types.rs  validation.rs
rabia-engine/: Cargo.toml
rabia-engine/src/: config.rs  engine.rs  leader.rs  lib.rs  state.rs
rabia-engine/src/network/: mod.rs
rabia-kvstore/: Cargo.toml
rabia-kvstore/src/: lib.rs  notifications.rs  operations.rs  store.rs
rabia-leader/: Cargo.toml
rabia-leader/src/: errors.rs  health.rs  leader.rs  lib.rs  notifications.rs  topology.rs
rabia-network/: Cargo.toml
rabia-network/src/: in_memory.rs  lib.rs  tcp.rs
rabia-network/tests/: integration_tests.rs
rabia-persistence/: Cargo.toml
rabia-persistence/src/: file_system.rs  in_memory.rs  lib.rs  tests.rs
rabia-testing/: Cargo.toml
rabia-testing/src/: fault_injection.rs  lib.rs  network_sim.rs  scenarios.rs
rabia-testing/src/network/: mod.rs
rabia-testing/tests/: integration_basic.rs  integration_consensus.rs  integration_kvstore.rs  integration_network.rs  integration_simple.rs
