[workspace]
members = [
    "rabia-core",
    "rabia-engine", 
    "rabia-network",
    "rabia-persistence",
    "rabia-testing",
    "rabia-kvstore",
    "rabia-leader",
    "examples",
    "benchmarks"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rabia-rs/rabia"
homepage = "https://github.com/rabia-rs/rabia"
documentation = "https://docs.rs/rabia"
authors = ["Rabia Contributors"]
keywords = ["consensus", "distributed-systems", "raft", "blockchain", "async"]
categories = ["algorithms", "data-structures", "network-programming", "concurrency"]
description = "High-performance Rust implementation of the Rabia consensus protocol"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = { version = "1.7", features = ["serde"] }
crc32fast = "1.4"
rand = "0.8"
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1.3"
futures-util = "0.3"
crossbeam-channel = "0.5"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.proptest]
version = "1.4"

