[package]
name = "rabia-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "baseline_performance"
harness = false

[[bench]]
name = "serialization_comparison"
harness = false

[[bench]]
name = "memory_pool_comparison"
harness = false

[[bench]]
name = "comprehensive_optimization"
harness = false

[[bench]]
name = "peak_performance"
harness = false

# [[bench]]
# name = "tcp_network_performance"
# harness = false

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.2.1" }
rabia-network = { path = "../rabia-network" }
criterion = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }