[package]
name = "rabia-benchmarks"
version.workspace = true
edition.workspace = true
publish = false

[[bench]]
name = "baseline_performance"
harness = false

[[bench]]
name = "serialization_comparison"
harness = false

[[bench]]
name = "memory_pool_comparison"
harness = false

[[bench]]
name = "comprehensive_optimization"
harness = false

[[bench]]
name = "peak_performance"
harness = false

# [[bench]]
# name = "tcp_network_performance"
# harness = false

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.4.0" }
rabia-testing = { path = "../rabia-testing", version = "0.4.0" }
criterion = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }