[package]
name = "rabia-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "kvstore_usage"
path = "kvstore_usage.rs"

[[bin]]
name = "consensus_cluster"
path = "consensus_cluster.rs"

[[bin]]
name = "performance_benchmark"
path = "performance_benchmark.rs"

[[bin]]
name = "tcp_networking"
path = "tcp_networking.rs"

[[bin]]
name = "leader_usage"
path = "leader_usage.rs"

[[bin]]
name = "tcp_networking"
path = "tcp_networking.rs"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.2.1" }
rabia-engine = { path = "../rabia-engine", version = "0.2.1" }
rabia-network = { path = "../rabia-network", version = "0.2.1" }
rabia-persistence = { path = "../rabia-persistence", version = "0.2.1" }
rabia-kvstore = { path = "../rabia-kvstore", version = "0.2.1" }
rabia-leader = { path = "../rabia-leader", version = "0.2.1" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }