[package]
name = "rabia-examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "kvstore_usage"
path = "kvstore_usage.rs"

[[bin]]
name = "consensus_cluster"
path = "consensus_cluster.rs"

[[bin]]
name = "performance_benchmark"
path = "performance_benchmark.rs"

[[bin]]
name = "tcp_networking"
path = "tcp_networking.rs"


[[bin]]
name = "custom_state_machine"
path = "custom_state_machine.rs"

[[bin]]
name = "kvstore_smr_example"
path = "kvstore_smr_example.rs"

[[bin]]
name = "counter_smr_example"
path = "counter_smr_example.rs"

[[bin]]
name = "banking_smr_example"
path = "banking_smr_example.rs"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.4.0" }
rabia-engine = { path = "../rabia-engine", version = "0.4.0" }
rabia-kvstore = { path = "../rabia-kvstore", version = "0.4.0" }
rabia-persistence = { path = "../rabia-persistence", version = "0.4.0" }
rabia-testing = { path = "../rabia-testing", version = "0.4.0" }
rabia-kvstore-example = { path = "kvstore_smr", version = "0.4.0" }
rabia-counter-example = { path = "counter_smr", version = "0.4.0" }
rabia-banking-example = { path = "banking_smr", version = "0.4.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = { workspace = true }
rand = "0.8"
bincode = "1.3"
bytes = "1.0"
