[package]
name = "rabia-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the Rabia consensus protocol"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
crc32fast = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }