[package]
name = "rabia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core SMR traits, types, and consensus algorithm implementation for the Rabia State Machine Replication framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
crc32fast = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }