[package]
name = "rabia-engine"
version = "0.1.0"
edition = "2021"
description = "Main consensus engine implementation for Rabia protocol"
license = "Apache-2.0"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }