[package]
name = "rabia-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Main consensus engine implementation for Rabia protocol"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.3.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
rabia-network = { path = "../rabia-network", version = "0.3.0" }
rabia-persistence = { path = "../rabia-persistence", version = "0.3.0" }