[package]
name = "rabia-kvstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Production-grade key-value store implementation with consensus integration"

[dependencies]
rabia-core = { path = "../rabia-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }