[package]
name = "rabia-leader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Leader management and coordination for Rabia consensus clusters"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.3.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }