[package]
name = "rabia-network"
version = "0.1.0"
edition = "2021"
description = "Network abstraction layer for Rabia consensus protocol"
license = "Apache-2.0"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }