[package]
name = "rabia-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Network abstraction layer for Rabia consensus protocol"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.2.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }