[package]
name = "rabia-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Network abstraction layer for Rabia consensus protocol"

[dependencies]
rabia-core = { path = "../rabia-core" }
tokio = { workspace = true, features = ["net", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }