[package]
name = "rabia-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Persistence layer implementation for Rabia consensus protocol"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.3.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }