[package]
name = "rabia-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Persistence layer implementation for Rabia consensus protocol"

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.4.0" }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }