[package]
name = "rabia-testing"
version = "0.1.0"
edition = "2021"
description = "Testing utilities and simulation framework for Rabia consensus protocol"
publish = false

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.2.1" }
rabia-engine = { path = "../rabia-engine", version = "0.2.1" }
rabia-network = { path = "../rabia-network", version = "0.2.1" }
rabia-persistence = { path = "../rabia-persistence", version = "0.2.1" }
rabia-kvstore = { path = "../rabia-kvstore", version = "0.2.1" }
rabia-leader = { path = "../rabia-leader", version = "0.2.1" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
async-trait = { workspace = true }