[package]
name = "rabia-testing"
version.workspace = true
edition.workspace = true
description = "Testing utilities and simulation framework for Rabia consensus protocol"
publish = false

[dependencies]
rabia-core = { path = "../rabia-core", version = "0.4.0" }
rabia-engine = { path = "../rabia-engine", version = "0.4.0" }
rabia-kvstore = { path = "../rabia-kvstore", version = "0.4.0" }
rabia-persistence = { path = "../rabia-persistence", version = "0.4.0" }
kvstore-smr = { path = "../examples/kvstore_smr", version = "0.4.0" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
async-trait = { workspace = true }