[package]
name = "counter-smr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Simple counter SMR implementation example for Rabia consensus"

[dependencies]
rabia-core = { path = "../../rabia-core", version = "0.3.0" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }