[package]
name = "kvstore-smr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Key-value store state machine implementation example using the Rabia SMR protocol"

[dependencies]
rabia-core = { path = "../../rabia-core", version = "0.4.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }